--- a/src/main/resources/templates/paginaAlbum.html
+++ b/src/main/resources/templates/paginaAlbum.html
@@ -9,6 +9,9 @@
 		<div th:insert="html_supporto/navbar.html"></div>
 		<h3>Pagina album</h3>
 		Nome album: <span th:text="${album.nome}"></span><br>
-		<a th:if="${fotografo}" th:href="@{'/fotografo' + '/' + ${fotografo.id}}" th:text="'Autore: ' + ${fotografo.nome}"></a>
+		<div th:if="${fotografo}">
+			Autore:
+			<a th:href="@{'/fotografo' + '/' + ${fotografo.id}}" th:text="${fotografo.nome}"></a>
+		</div>
 	</body>
 </html>
